--- a/NoDecentDiary/Components/InputTag.razor
+++ b/NoDecentDiary/Components/InputTag.razor
@@ -1,8 +1,7 @@
-﻿@inherits MyComponentBase
+﻿@inherits DialogComponentBase
 
-<MDialog Value="Value"
-         ValueChanged="InternalValueChanged"
-         MaxWidth="420">
+<MyDialog MyValue="Value"
+          MyValueChanged="InternalValueChanged">
     <MCard>
         <MCardTitle>
             @Title
@@ -12,10 +11,8 @@
             </MButton>
         </MCardTitle>
         <MCardText Class="pb-0">
-            <MTextField Value="Text"
-                        ValueChanged="TextChanged"
+            <MTextField @bind-Value="InputText"
                         Dense
-                        Autofocus
                         HideDetails="@("auto")"
                         Outlined
                         Counter="20"
@@ -36,4 +33,4 @@
             </MButton>
         </MCardActions>
     </MCard>
-</MDialog>
+</MyDialog>
