--- a/NoDecentDiary/Pages/MinePage.razor
+++ b/NoDecentDiary/Pages/MinePage.razor
@@ -228,8 +228,8 @@
     </MCard>
 </MContainer>
 
-<MDialog MaxWidth="420"
-         @bind-Value="ShowLanguage">
+<MyDialog MaxWidth="420"
+         @bind-MyValue="ShowLanguage">
     <MCard>
         <MCardTitle Class="font-weight-bold">
             @(I18n!.T("Mine.SelectLanguage"))
@@ -255,10 +255,10 @@
             </MRadioGroup>
         </MCardText>
     </MCard>
-</MDialog>
+</MyDialog>
 
-<MDialog MaxWidth="420"
-         @bind-Value="ShowFeedback">
+<MyDialog MaxWidth="420"
+         @bind-MyValue="ShowFeedback">
     <MCard>
         <MCardTitle Class="font-weight-bold">
             @(I18n!.T("Mine.ContactWay"))
@@ -295,4 +295,4 @@
             </MListItem>
         </MCardText>
     </MCard>
-</MDialog>
+</MyDialog>
