refactor: Abstract DeleteDialog and InputDialog

--- a/NoDecentDiary/Components/DialogComponents/DeleteDialog.razor
+++ b/NoDecentDiary/Components/DialogComponents/DeleteDialog.razor
@@ -1,4 +1,5 @@
-﻿@inherits DialogComponentBase
+﻿@namespace NoDecentDiary.Components
+@inherits DialogComponentBase
 
 <MyDialog MyValue="Value"
           MyValueChanged="InternalValueChanged"
