--- a/NoDecentDiary/Components/Swiper/SwiperTabItems.razor
+++ b/NoDecentDiary/Components/Swiper/SwiperTabItems.razor
@@ -1,4 +1,6 @@
-﻿<div class="@("swiper " + Id)" style="@(Show?"":"display:none;")">
+﻿@namespace NoDecentDiary.Components
+
+<div class="@("swiper " + Id)" style="@(Show?"":"display:none;")">
     <div class="swiper-wrapper">
         @ChildContent
     </div>
