--- a/NoDecentDiary/Pages/IndexPage.razor
+++ b/NoDecentDiary/Pages/IndexPage.razor
@@ -78,9 +78,9 @@
     </FabTransition>
 }
 
-<InputTag @bind-Value="ShowAddTag"
-          @bind-Text="AddTagName"
-          Title="@(I18n!.T("Tag.Add"))"
-          OnSave="SaveAddTag">
-
-</InputTag>
+<InputDialog @bind-Value="ShowAddTag"
+             @bind-Text="AddTagName"
+             Title="@(I18n!.T("Tag.Add"))"
+             Placeholder="@(I18n!.T("Tag.Placeholder"))"
+             OnOK="SaveAddTag">
+</InputDialog>
