--- a/NoDecentDiary/Pages/UserPage.razor
+++ b/NoDecentDiary/Pages/UserPage.razor
@@ -92,7 +92,7 @@
 </MContainer>
 
 <MyDialog MaxWidth="420"
-         @bind-MyValue="ShowAvatar">
+          @bind-MyValue="ShowAvatar">
     <MCard>
         <MCardTitle Class="font-weight-bold">
             @(I18n!.T("User.EditAvatar"))
@@ -130,74 +130,17 @@
     </MCard>
 </MyDialog>
 
-<MyDialog MaxWidth="420"
-         @bind-MyValue="ShowUserName">
-    <MCard>
-        <MCardTitle Class="font-weight-bold">
-            @(I18n!.T("User.EditUserName"))
-            <MSpacer></MSpacer>
-            <MButton Icon OnClick="()=>ShowUserName= false">
-                <MIcon>mdi-close</MIcon>
-            </MButton>
-        </MCardTitle>
-        <MCardText Class="pb-0">
-            <MTextField @bind-Value="InputUserName"
-                        Dense
-                        Autofocus
-                        HideDetails="@("auto")"
-                        Outlined
-                        Counter="20"
-                        maxlength="20"
-                        spellcheck="false"
-                        Placeholder="@(I18n!.T("User.UserNamePlace"))">
-            </MTextField>
-        </MCardText>
-        <MCardActions>
-            <MSpacer></MSpacer>
-            <MButton Text OnClick="()=>ShowUserName=false">
-                @(I18n!.T("Share.Cancel"))
-            </MButton>
-            <MButton Text
-                     Color="primary"
-                     OnClick="SaveUserName">
-                @(I18n!.T("Share.Save"))
-            </MButton>
-        </MCardActions>
-    </MCard>
-</MyDialog>
+<InputDialog @bind-Value="ShowUserName"
+             @bind-Text="InputUserName"
+             Title="@(I18n!.T("User.EditUserName"))"
+             Placeholder="@(I18n!.T("User.UserNamePlace"))"
+             OnOK="SaveUserName">
+</InputDialog>
 
-<MyDialog MaxWidth="420"
-         @bind-MyValue="ShowSign">
-    <MCard>
-        <MCardTitle Class="font-weight-bold">
-            @(I18n!.T("User.EditSign"))
-            <MSpacer></MSpacer>
-            <MButton Icon OnClick="()=>ShowSign= false">
-                <MIcon>mdi-close</MIcon>
-            </MButton>
-        </MCardTitle>
-        <MCardText Class="pb-0">
-            <MTextField @bind-Value="InputSign"
-                        Dense
-                        Autofocus
-                        HideDetails="@("auto")"
-                        Outlined
-                        Counter="50"
-                        maxlength="50"
-                        spellcheck="false"
-                        Placeholder="@(I18n!.T("User.SignPlace"))">
-            </MTextField>
-        </MCardText>
-        <MCardActions>
-            <MSpacer></MSpacer>
-            <MButton Text OnClick="()=>ShowSign=false">
-                @(I18n!.T("Share.Cancel"))
-            </MButton>
-            <MButton Text
-                     Color="primary"
-                     OnClick="SaveSign">
-                @(I18n!.T("Share.Save"))
-            </MButton>
-        </MCardActions>
-    </MCard>
-</MyDialog>
+<InputDialog @bind-Value="ShowSign"
+             @bind-Text="InputUserName"
+             Title="@(I18n!.T("User.EditSign"))"
+             MaxLength="50"
+             Placeholder="@(I18n!.T("User.SignPlace"))"
+             OnOK="SaveSign">
+</InputDialog>
