feat: add User Agreenment and PrivacyPolicy

--- a/NoDecentDiary/Pages/AboutPage.razor
+++ b/NoDecentDiary/Pages/AboutPage.razor
@@ -56,7 +56,7 @@
             </MListItem>
 
             <MDivider Class="mx-3 mx-sm-0"></MDivider>
-            <MListItem OnClick="ToDo">
+            <MListItem OnClick="NavigateToUserAgreement">
                 <MListItemIcon>
                     <MIcon Class="list-item-icon">
                         mdi-file-document-multiple-outline
@@ -72,7 +72,7 @@
 
             <MDivider Class="mx-3 mx-sm-0"></MDivider>
 
-            <MListItem OnClick="ToDo">
+            <MListItem OnClick="NavigateToPrivacyPolicy">
                 <MListItemIcon>
                     <MIcon Class="list-item-icon">
                         mdi-lock-outline
