feat: add OpenAppStore method

--- a/NoDecentDiary/Pages/AboutPage.razor
+++ b/NoDecentDiary/Pages/AboutPage.razor
@@ -107,7 +107,7 @@
            Elevation="4"
            Rounded="@("lg")">
         <MList>
-            <MListItem OnClick="ToDo">
+            <MListItem OnClick="OpenAppDetails">
                 <MListItemIcon>
                     <MIcon Class="list-item-icon">
                         mdi-star-outline
