--- a/NoDecentDiary/Components/MarkdownDisplay.razor
+++ b/NoDecentDiary/Components/MarkdownDisplay.razor
@@ -3,7 +3,10 @@
 @code {
     public ElementReference element;
     private string _value = default!;
-    private Dictionary<string, object> _options = new();
+    private Dictionary<string, object> _options = new()
+    {
+        {"mode", "light"}
+    };
 
     [Inject]
     IJSRuntime JS { get; set; } = default!;
@@ -15,9 +18,18 @@
         set => SetValue(value);
     }
 
+    protected override void OnAfterRender(bool firstRender)
+    {
+        if (firstRender)
+        {
+            RenderingMarkdown(Value);
+        }
+        base.OnAfterRender(firstRender);
+    }
+
     private void SetValue(string value)
     {
-        if(_value != value)
+        if (_value != value)
         {
             _value = value;
             RenderingMarkdown(value);
@@ -26,7 +38,10 @@
 
     private async void RenderingMarkdown(string value)
     {
-        _options.Add("mode", "light");
-        await JS.InvokeVoidAsync("Vditor.preview", new object[3] { element, value, _options });
+        if (element.Context != null && !string.IsNullOrEmpty(value))
+        {
+            await JS.InvokeVoidAsync("Vditor.preview", new object[3] { element, value, _options });
+        }
+
     }
 }
